@@ -1,3 +1,9 @@
+TAG: gxdhtload-6-0-14-1
+DATE: 05/08/2019
+STAFF: lec
+CHANGES: T13116
+1) check for duplicate pubmedids before adding to properties
+
 TAG: gxdhtload-6-0-12-1
 DATE: 05/07/2018
 STAFF: lec
